<resources>
    <string name="app_name">Vincent_Arellano_CA1</string>
    <string name="spin">Spin</string>
    <string name="zebra">TODO</string>
    <string name="winOrLose">TODO</string>
    <string name="hippo">TODO</string>
    <string name="lion">TODO</string>
    <string name="instructions">Instructions</string>
    <string name="statistics">Statistics</string>
    <string name="heading">Instructions</string>
    <string name="back">Back</string>
    <string name="to_win_you_must_get_the_same_three_animal_image">To win you must get the same three animal image.</string>
    <string name="click_the_button_quot_spin_quot_to_spin_the_images">Click the button \"SPIN\" to spin the images.</string>
    <string name="otherwise_you_have_lost_and_should_respin">Otherwise you have lost and should respin.</string>
    <string name="spinButton">TODO</string>
    <string name="win">TODO</string>
    <string name="loss">TODO</string>
    <string name="statisticsTitle">Statistics</string>
    <string name="number_of_wins">Number of Wins</string>
    <string name="number_of_spins">Number of Spins</string>
    <string name="win_loss_ratio">Win/Loss Ratio</string>
    <string name="back_to_main">Back</string>
    <string name="backButton">back</string>
    <string name="backToMain">back</string>
</resources>